--- a/paginas/login.html
+++ b/paginas/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-
+  <!--HEADER-->
   <header>
     <nav class="navbar navbar-expand-lg color">
       <div class="container-fluid">
@@ -70,61 +70,45 @@
     </nav>
     <hr class="p-0 m-0">
  </header>
+   <!--MAIN-->
 
-
-
-    <main class="main">
-        <section class="container-fluid">
-
-            <div class="row">
-
-                <div class="col ">
-                    <img class="img__log" src="../assets/img/margen1.jpg" alt="foto vela">
-
+   <main class="main">
+      <section class="container-fluid">
+        <div class="row row-cols-lg-3 mx-4 pt-4">
+          <div class="col">
+            <img class="img__log" src="../assets/img/margen1.jpg" alt="foto vela">
+          </div>
+           <div class="col ">
+             <div class="principal">
+                 <h5 class="fs-1 text">LOGIN</h5>
+             </div>
+             <form class="px-4 py-3 border border-secondary">
+                <div class="mb-3">
+                  <label for="exampleDropdownFormEmail1" class="form-label">Direccion de Mail</label>
+                  <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
                 </div>
-
-                <div class="col back">
-
-                    <div class="principal">
-                        <h5 class="fs-1 text">LOGIN</h5>
-                    </div>
-
-                  <form class="px-4 py-3 border border-secondary">
-                        <div class="mb-3">
-                          <label for="exampleDropdownFormEmail1" class="form-label">Direccion de Mail</label>
-                          <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
-                        </div>
-                        <div class="mb-3">
-                          <label for="exampleDropdownFormPassword1" class="form-label">Contraseña</label>
-                          <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="contraseña">
-                        </div>
-                        <div class="mb-3">
-                          <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="dropdownCheck">
-                            <label class="form-check-label" for="dropdownCheck">
-                              Remember me
-                            </label>
-                          </div>
-                        </div>
-                        <button type="button" class="btn btn-outline-dark">Sign in</button>
-
-                        <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">New around here? Sign up</a>
-                      <a class="dropdown-item" href="#">Forgot password?</a>
-                 </form>
-
+                <div class="mb-3">
+                  <label for="exampleDropdownFormPassword1" class="form-label">Contraseña</label>
+                  <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="contraseña">
                 </div>
-
-                <div class="col">
-                    <img class="img__log" src="../assets/img/margen1.jpg"  alt="foto vela">
-
+                <div class="mb-3">
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dropdownCheck">
+                    <label class="form-check-label" for="dropdownCheck">
+                     Remember me
+                    </label>
+                  </div>
                 </div>
-    
+                <button type="button" class="btn btn-outline-dark">Sign in</button>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">New around here? Sign up</a>
+                <a class="dropdown-item" href="#">Forgot password?</a>
+             </form>
             </div>
-
+            <div class="col">
+              <img class="img__log" src="../assets/img/margen1.jpg"  alt="foto vela">
+            </div>
         </section>
-           
-
     </main>
 
     <footer class="colorFot p-3">
