--- a/index.html
+++ b/index.html
@@ -101,36 +101,35 @@
                   </div>
                 </div>
                 <div class="col">
-                  <img class="img_portada mx-5" src="assets/img/Velaportada5OG.png"  alt="1">
+                  <img class="img_portada " src="assets/img/Velaportada5OG.png"  alt="1">
                 </div>
               </div>
             </div>
           </div>
           <!--SEGUNDA PORTADA DEL CAROUSEL-->
-          <div class="carousel-item">
-            <div class="d-block carousel_2">
-              <div class="row align-items-center">
+          <div class="carousel-item active">
+            <div class="d-block carousel_1">
+              <div class="row align-items-center carousel_1">
                 <div class="col texto_portada mx-5">
-                  <div class="devilsnight_estilos ms-5">
-                    <hr class="borde2_estilo">
-                    <h5 class="devil_font">DEVIL'S NIGHT</h5>
-                    <h5 class="devil_font">COLLECTION</h5>
-                    <hr class="borde2_estilo">
+                  <div class="coresix_estilos ms-5">
+                    <hr class="borde1_estilo">
+                    <h5 class="core_font">DEVIL'S NIGHT</h5>
+                    <h5 class="core_font">COLLECTION</h5>
+                    <hr class="borde1_estilo">
                     <div class="detalle">
-                      <p class="texto_detalle2">Mira a nuestra nueva línea de aromas exclusivos, para hasta 85 horas de quemado.
+                      <p class="texto_detalle">Mira a nuestra nueva línea de aromas exclusivos, para hasta 85 horas de quemado.
                         ¡Con una nueva vela hecha a mano + un artículo sorpresa en cada caja! Selecciona tu caja según tus preferencias personales de aroma cuando empieces.
                       </p>
-                      <button class="button_detalle2 mt-2">Detalles</button>
+                      <button class="button_detalle mt-2">Detalles</button>
                     </div>
                   </div>
                 </div>
                 <div class="col">
-                  <img class="img_portada2 mx-5" src="assets/img/devilsnight2.jpg"  alt="1">
+                    <img class="img_portada" src="assets/img/devilsnight2.jpg"  alt="1">
                 </div>
               </div>
             </div>
           </div>
-        </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
@@ -144,7 +143,7 @@
 
     <!--SECTION 1 (VIDEO E INTRODUCCION)-->
     <section class="container-fluid">
-      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-2 align-items-center">
+      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 align-items-center">
         <div class="col mt-4 mb-2">
           <video class="video" src="assets/video/videoVela1.mp4" autoplay muted loop ></video>
         </div>
@@ -162,7 +161,7 @@
         <h5 class="titulo__section2">VELAS CON INTENCIÓN</h5>
         <hr>
       </div>
-      <div class="row row-cols-lg-3 mx-3 mt-4 pb-4">
+      <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 mx-3 mt-4 pb-4">
         <div class="col">
           <div class="container__section2">
             <img src="./assets/img/vela 4.jpg" alt="imagen_vela"  class="imagen_section2">
