--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -72,14 +72,18 @@
  </header>
  <main class="main">
     <!--PORTADA CONTACTO-->
-   <section class="container-fluid">
-     <div class="card text-white">
-      <img src="../assets/img/fotoportada3.jpg" class="card-img portada_contacto" alt="imagen velas">
-      <div class="card-img-overlay w-50 intro_contacto ">
-          <h5 class="card-title ms-5 fs-2">CONTACTO</h5>
-      </div>
-     </div>
-   </section>
+    <section class="container-fluid">
+      <div class=" portada__contacto row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-2 ms-3">
+        <div class="col">
+         <h5 class="intro_vela1">CONTACTO</h5>
+         <p class="intro__vela2">Customer Care</p>
+        </div>
+        <div class="col p-0">
+          <img src="../assets/img/fotoportada3.jpg" class=" img__contacto p-0 " alt="imagen velas">
+        </div>
+        
+      </div> 
+    </section>
    <!--INTRODUCCION-->
    <section class="conteiner-fluid">
      <div class="m-5 intro_contacto2">
@@ -94,7 +98,7 @@
    </section>
    <!--FORMULARIO-->
    <div class="conteiner-fluid">
-     <form class=" p-3 prueba">
+     <form class=" p-3 form_contacto">
        <div class=" border border-secondary w-100 h-100 d-inline-block p-5 prueba2">
          <div class="row mb-3">
            <div class="col">
