--- a/paginas/locales.html
+++ b/paginas/locales.html
@@ -72,7 +72,7 @@
    <!--MAIN-->
    <main class="main">
      <section class="conteiner-fluid">
-       <div class="row portada_locales ms-4">
+       <div class="row row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2 row-cols-xl-2 portada_locales ms-lg-4">
          <div class="col">
            <h1 class="fs-1 intro__locales">LOCALES</h1>
          </div>
