--- a/paginas/login.html
+++ b/paginas/login.html
@@ -74,15 +74,15 @@
 
    <main class="main">
       <section class="container-fluid">
-        <div class="row row-cols-lg-3 mx-4 pt-4">
+        <div class="row  row-cols-xl-3 row-cols-md-3 row-cols-lg-3 mx-lg-3  pt-4">
           <div class="col">
             <img class="img__log" src="../assets/img/margen1.jpg" alt="foto vela">
           </div>
-           <div class="col ">
+           <div class="col">
              <div class="principal">
                  <h5 class="fs-1 text">LOGIN</h5>
              </div>
-             <form class="px-4 py-3 border border-secondary">
+             <form class="px-4 py-3 border form_login border-secondary">
                 <div class="mb-3">
                   <label for="exampleDropdownFormEmail1" class="form-label">Direccion de Mail</label>
                   <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
@@ -101,7 +101,7 @@
                 </div>
                 <button type="button" class="btn btn-outline-dark">Sign in</button>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">New around here? Sign up</a>
+                <a class="dropdown-item py-2" href="#">New around here?</a>
                 <a class="dropdown-item" href="#">Forgot password?</a>
              </form>
             </div>
